Add favicon, meta tags for SEO & link CSS stylesheet to HTML

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Gateway to NE India. Your one-stop destination for travel information related to Northeast India. Northeast India Assam and Meghalaya.">
+    <meta name="keywords"
+        content="Northeast India, Northeast India travel guide, Northeast India tourism, Assam tourism, Meghalaya tourism, Northeast India tourism, Northeast India adventures, Northeast India travel">
     
+    <!-- Title of the website -->
+    <title>Gateway to NE India</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+
+<body>
+
 </body>
+
 </html>
