--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
 <body>
 
+    <!-- Header -->
+    <header>Header</header>
+
+    <!-- Main content -->
+    <main>Welcome to Gateway to NE India</main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
+
 </body>
 
 </html>
