Add logo to header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="Gateway to NE India. Your one-stop destination for travel information related to Northeast India. Northeast India Assam and Meghalaya.">
     <meta name="keywords"
         content="Northeast India, Northeast India travel guide, Northeast India tourism, Assam tourism, Meghalaya tourism, Northeast India tourism, Northeast India adventures, Northeast India travel">
-    
+
     <!-- Title of the website -->
     <title>Gateway to NE India</title>
 
@@ -28,7 +28,13 @@
 <body>
 
     <!-- Header -->
-    <header>Header</header>
+    <header class="header">
+        <!-- Logo -->
+        <a href="index.html" id="logo">
+            <img src="/assets/images/gateway_to_ne_india_logo.webp" alt="Logo of Gateway to Northeast India">
+        </a>
+        </nav>
+    </header>
 
     <!-- Main content -->
     <main>Welcome to Gateway to NE India</main>
