Import Fontawesome kit

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <!-- Footer -->
     <footer>Footer</footer>
 
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/be0d508cf4.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
