--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
         <a href="index.html" id="logo">
             <img src="/assets/images/gateway_to_ne_india_logo.webp" alt="Logo of Gateway to Northeast India">
         </a>
+        <!-- Hamburger icon -->
+        <input type="checkbox" name="side-menu" id="side-menu">
+        <label for="side-menu" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- Menu -->
+        <nav class="nav">
+            <ul class="menu">
+                <li><a href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#"><i class="fa-regular fa-compass"></i>Explore</a></li>
+                <li><a href="#"><i class="fa-solid fa-route"></i>Travel</a></li>
+                <li><a href="#"><i class="fa-regular fa-envelope"></i>Contact</a></li>
+            </ul>
         </nav>
     </header>
 
