Fix stylesheet & logo file path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <header class="header">
         <!-- Logo -->
         <a href="index.html" id="logo">
-            <img src="/assets/images/gateway_to_ne_india_logo.webp" alt="Logo of Gateway to Northeast India">
+            <img src="assets/images/gateway_to_ne_india_logo.webp" alt="Logo of Gateway to Northeast India">
         </a>
         <!-- Hamburger icon -->
         <input type="checkbox" name="side-menu" id="side-menu">
