Amend class & ids in HTML

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <!-- Header -->
     <header class="header">
         <!-- Logo -->
-        <a href="index.html" id="logo">
+        <a href="index.html">
             <img src="assets/images/gateway_to_ne_india_logo.webp" alt="Logo of Gateway to Northeast India">
         </a>
         <!-- Hamburger icon -->
         <input type="checkbox" name="side-menu" id="side-menu">
-        <label for="side-menu" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="side-menu" class="menu-toggle"><i class="fa-solid fa-bars"></i></label>
         <!-- Menu -->
-        <nav class="nav">
+        <nav>
             <ul class="menu">
-                <li><a href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="index.html" class="active"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a href="#"><i class="fa-regular fa-compass"></i>Explore</a></li>
                 <li><a href="#"><i class="fa-solid fa-route"></i>Travel</a></li>
                 <li><a href="#"><i class="fa-regular fa-envelope"></i>Contact</a></li>
