--- a/index.html
+++ b/index.html
@@ -51,7 +51,30 @@
     <main>Welcome to Gateway to NE India</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul id="social-media">
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.threads.net/" target="_blank" rel="noopener" aria-label="Visit our Threads page (opens in a new tab)">
+                    <i class="fa-brands fa-threads"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/be0d508cf4.js" crossorigin="anonymous"></script>
