Add visit our social media heading and copyright to footer

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 
     <!-- Footer -->
     <footer>
+        <!-- Visit our social media header -->
+        <p id="visit-socialm">Visit our social media page:</p>
+        
+        <!-- Social media buttons -->
         <ul id="social-media">
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
@@ -74,6 +78,9 @@
                 </a>
             </li>
         </ul>
+
+        <!-- Copyright -->
+        <p id="copyright">(c) Gateway to NE India 2024</p>
     </footer>
 
     <!-- Font Awesome kit -->
