--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html" class="active"><i class="fa-solid fa-house"></i> Home</a></li>
-                <li><a href="#"><i class="fa-regular fa-compass"></i> Explore</a></li>
-                <li><a href="#"><i class="fa-solid fa-route"></i> Travel</a></li>
-                <li><a href="#"><i class="fa-regular fa-envelope"></i> Contact</a></li>
+                <li><a href="explore.html"><i class="fa-regular fa-compass"></i> Explore</a></li>
+                <li><a href="travel.html"><i class="fa-solid fa-route"></i> Travel</a></li>
+                <li><a href="contact.html"><i class="fa-regular fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
     </header>
