Update travel navbar links to home, travel & contact and move active class to travel page

--- a/travel.html
+++ b/travel.html
@@ -39,10 +39,10 @@
         <!-- Menu -->
         <nav>
             <ul class="menu">
-                <li><a href="index.html" class="active"><i class="fa-solid fa-house"></i> Home</a></li>
-                <li><a href="#"><i class="fa-regular fa-compass"></i> Explore</a></li>
-                <li><a href="#"><i class="fa-solid fa-route"></i> Travel</a></li>
-                <li><a href="#"><i class="fa-regular fa-envelope"></i> Contact</a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
+                <li><a href="explore.html"><i class="fa-regular fa-compass"></i> Explore</a></li>
+                <li><a href="travel.html" class="active"><i class="fa-solid fa-route"></i> Travel</a></li>
+                <li><a href="contact.html"><i class="fa-regular fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
     </header>
