Add video to assets & insert video in home page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
     </header>
 
     <!-- Main content -->
-    <main>Welcome to Gateway to NE India</main>
+    <main>
+        <video id="background-video" autoplay loop muted poster="assets/images/assam_vid_poster.png">
+            <source src="assets/videos/assam_video.webm" type="video/webm">
+            <source src="assets/videos/assam_video.mp4" type="video/mp4">
+        </video>
+    </main>
 
     <!-- Footer -->
     <footer>
