Add video background to landing home page & welcome message in front of video

--- a/index.html
+++ b/index.html
@@ -47,38 +47,51 @@
         </nav>
     </header>
 
-    <!-- Main content -->
-    <main>
-        <video id="background-video" autoplay loop muted poster="assets/images/assam_vid_poster.png">
+    <!-- Hero video background -->
+    <div class="video-wrapper">
+        <video playsinline autoplay loop muted poster="assets/images/assam_vid_poster.png">
             <source src="assets/videos/assam_video.webm" type="video/webm">
             <source src="assets/videos/assam_video.mp4" type="video/mp4">
         </video>
+    </div>
+
+    <!-- Main content -->
+    <main>
+        <!-- Welcome message in the front of the video background -->
+        <div class="welcome-message">
+            <h1>Welcome to GTNEI</h1>
+            <button>Explore</button>
+        </div>
     </main>
 
     <!-- Footer -->
     <footer>
         <!-- Visit our social media header -->
         <p id="visit-socialm">Visit our social media page:</p>
-        
+
         <!-- Social media buttons -->
         <ul id="social-media">
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.threads.net/" target="_blank" rel="noopener" aria-label="Visit our Threads page (opens in a new tab)">
+                <a href="https://www.threads.net/" target="_blank" rel="noopener"
+                    aria-label="Visit our Threads page (opens in a new tab)">
                     <i class="fa-brands fa-threads"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
+                <a href="https://www.x.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
                     <i class="fa-brands fa-x-twitter"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
             </li>
