Add and style welcome message & Explore button

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
     <main>
         <!-- Welcome message in the front of the video background -->
         <div class="welcome-message">
-            <h1>Welcome to GTNEI</h1>
-            <button>Explore</button>
+            <h1 class="welcome-font-style">Welcome to Gateway to Northeast India!</h1>
+            <p class="welcome-font-style">Your one-stop destination for travel information related to Northeast India.
+            </p>
+            <p class="welcome-font-style">Be a part of this exciting journey and uncover the hidden gems of Northeast
+                India with us!</p>
+            <button id="wlcm-button"><a href="explore.html" class="visit-explore-btn"><i class="fa-regular fa-compass"></i>
+                    Explore</a></button>
         </div>
     </main>
 
