--- a/explore.html
+++ b/explore.html
@@ -48,32 +48,56 @@
     </header>
 
     <!-- Main content -->
-    <main>Welcome to Gateway to NE India</main>
+    <main>
+        <div class="main-explore">
+            <section id="section-northeast">
+                <h1>Explore the seven sisters and one brother</h1>
+                <p>Every bit of Northeast India feels like magic, encompassing the best of dense forests, ancient
+                    monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading waterfalls.
+                    This takes you one step closer to heaven. Every person who’s a traveller by heart must go on a
+                    Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
+                </p>
+            </br>
+                <p>Feel at home at the cleanest villages in Asia, trek on the oldest root bridges, chill in the most
+                    beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous monasteries,
+                    enjoy boating in one of the river islands, and much more. Whatever your reason may be, the fact
+                    remains that a major part of Northeast India remains unexplored. It doesn’t matter whether you’re
+                    travelling solo, with friends, family, or your better half; a Northeast vacation is an experience
+                    which should definitely be included in every traveller’s bucket list.
+                </p>
+                <img src="assets/images/seven_sisters_of_india.webp" alt="The costume of seven sisters plus one brother of India">
+            </section>
+        </div>
+    </main>
 
     <!-- Footer -->
     <footer>
         <!-- Visit our social media header -->
         <p id="visit-socialm">Visit our social media page:</p>
-        
+
         <!-- Social media buttons -->
         <ul id="social-media">
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.threads.net/" target="_blank" rel="noopener" aria-label="Visit our Threads page (opens in a new tab)">
+                <a href="https://www.threads.net/" target="_blank" rel="noopener"
+                    aria-label="Visit our Threads page (opens in a new tab)">
                     <i class="fa-brands fa-threads"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
+                <a href="https://www.x.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
                     <i class="fa-brands fa-x-twitter"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
             </li>
