--- a/explore.html
+++ b/explore.html
@@ -49,27 +49,34 @@
 
     <!-- Main content -->
     <main>
-        <div class="main-explore">
-            <section id="section-northeast">
-                <h1 class="seven-sis-pagh">Explore the seven sisters and one brother</h1>
-                <p class="seven-sis-pagh">Every bit of Northeast India feels like magic, encompassing the best of dense forests, ancient
-                    monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading waterfalls.
-                    This takes you one step closer to heaven. Every person who’s a traveller by heart must go on a
-                    Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
-                </p>
-            </br>
-                <p class="seven-sis-pagh">Feel at home at the cleanest villages in Asia, trek on the oldest root bridges, chill in the most
-                    beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous monasteries,
-                    enjoy boating in one of the river islands, and much more. Whatever your reason may be, the fact
-                    remains that a major part of Northeast India remains unexplored. It doesn’t matter whether you’re
-                    travelling solo, with friends, family, or your better half; a Northeast vacation is an experience
-                    which should definitely be included in every traveller’s bucket list.
-                </p>
-                <div class="justify-flexbox">
-                <img src="assets/images/seven_sisters_of_india.webp" class="seven-sis-img" alt="The costume of seven sisters plus one brother of India">
+        <section id="explore-northeast">
+            <div id="seven-sis">
+                <div id="seven-sis-ne">
+                    <h1>Explore the seven sisters and one brother</h1>
+                    <p>Every bit of Northeast India feels like magic, encompassing the best of dense
+                        forests, ancient
+                        monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading
+                        waterfalls.
+                        This takes you one step closer to heaven. Every person who’s a traveller by heart must go on a
+                        Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
+                    </p>
+                    <p>Feel at home at the cleanest villages in Asia, trek on the oldest root
+                        bridges, chill in the most
+                        beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous monasteries,
+                        enjoy boating in one of the river islands, and much more. Whatever your reason may be, the fact
+                        remains that a major part of Northeast India remains unexplored. It doesn’t matter whether
+                        you’re
+                        travelling solo, with friends, family, or your better half; a Northeast vacation is an
+                        experience
+                        which should definitely be included in every traveller’s bucket list.
+                    </p>
                 </div>
-            </section>
-        </div>
+                <div id="seven-sis-img">
+                    <img src="assets/images/seven_sisters_of_india.webp" class="seven-sis-pic"
+                        alt="The costume of seven sisters plus one brother of India">
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
