--- a/explore.html
+++ b/explore.html
@@ -49,34 +49,68 @@
 
     <!-- Main content -->
     <main>
-        <section id="explore-northeast">
-            <div id="seven-sis">
-                <div id="seven-sis-ne">
-                    <h1>Explore the seven sisters and one brother</h1>
-                    <p>Every bit of Northeast India feels like magic, encompassing the best of dense
-                        forests, ancient
-                        monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading
-                        waterfalls.
-                        This takes you one step closer to heaven. Every person who’s a traveller by heart must go on a
-                        Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
-                    </p>
-                    <p>Feel at home at the cleanest villages in Asia, trek on the oldest root
-                        bridges, chill in the most
-                        beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous monasteries,
-                        enjoy boating in one of the river islands, and much more. Whatever your reason may be, the fact
-                        remains that a major part of Northeast India remains unexplored. It doesn’t matter whether
-                        you’re
-                        travelling solo, with friends, family, or your better half; a Northeast vacation is an
-                        experience
-                        which should definitely be included in every traveller’s bucket list.
-                    </p>
+        <div class="explore-container">
+            <section id="explore-northeast">
+                <div id="seven-sis">
+                    <div id="seven-sis-ne">
+                        <h1>Explore the seven sisters and one brother</h1>
+                        <p>Every bit of Northeast India feels like magic, encompassing the best of dense
+                            forests, ancient
+                            monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading
+                            waterfalls.
+                            This takes you one step closer to heaven. Every person who’s a traveller by heart must go on
+                            a
+                            Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
+                        </p>
+                        <p>Feel at home at the cleanest villages in Asia, trek on the oldest root
+                            bridges, chill in the most
+                            beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous
+                            monasteries,
+                            enjoy boating in one of the river islands, and much more. Whatever your reason may be, the
+                            fact
+                            remains that a major part of Northeast India remains unexplored. It doesn’t matter whether
+                            you’re
+                            travelling solo, with friends, family, or your better half; a Northeast vacation is an
+                            experience
+                            which should definitely be included in every traveller’s bucket list.
+                        </p>
+                    </div>
+                    <div id="seven-sis-img">
+                        <img src="assets/images/seven_sisters_of_india.webp" class="seven-sis-pic"
+                            alt="The costume of seven sisters plus one brother of India">
+                    </div>
                 </div>
-                <div id="seven-sis-img">
-                    <img src="assets/images/seven_sisters_of_india.webp" class="seven-sis-pic"
-                        alt="The costume of seven sisters plus one brother of India">
+            </section>
+            <section id="explore-map">
+                <div id="seven-map">
+                    <div id="seven-map-ne">
+                        <h1>Facts about Northeast India</h1>
+                        <h3>What are seven sisters and one brother of India?</h3>
+                        <p> Have you ever asked yourself that question?
+                            We did, too, and it turns out that Northeast India comprises seven sister states, i.e.,
+                            Arunachal Pradesh, Assam, Manipur, Meghalaya, Mizoram, Nagaland, Tripura, and one brother
+                            state of Sikkim. Not just that, you’ll discover on your trip to Northeast India that the
+                            region also comprises the Northeastern area of West Bengal, which happens to be the famous
+                            Darjeeling.
+                        </p>
+                        <h3>What is the best time to visit Northeast India?</h3>
+                        <p>Owing much to its stunning location wherein Northeast India shares its borders with the
+                            neighbouring countries of Tibet, Bhutan, Bangladesh, and Myanmar, the whole region is
+                            dominated by hills and mountains to a large extent. Due to this, the climate in Northeast
+                            India generally remains cool while winters get extremely cold.
+                            It is advised that travelling to Northeast regions should be avoided in the rainy season
+                            from May to September-end. Hence, the best time to visit Northeast India is from November to
+                            April, also the peak season for travellers. The weather is at its best at this time, making
+                            it perfect for heading out and witnessing the authentic charm of the seven states.
+                        </p>
+                    </div>
+                    <div id="seven-map-img">
+                        <img src="assets/images/seven_sis_map.webp" class="seven-map-pic"
+                            alt="The map of seven sisters plus one brother of India">
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
 
     <!-- Footer -->
