--- a/travel.html
+++ b/travel.html
@@ -48,7 +48,70 @@
     </header>
 
     <!-- Main content -->
-    <main>Welcome to Gateway to NE India</main>
+    <main>
+        <div class="travel-container">
+            <section id="travel-assam">
+                <div id="assam">
+                    <div id="assam-ne">
+                        <h1>Assam</h1>
+                        <p>Every bit of Northeast India feels like magic, encompassing the best of dense
+                            forests, ancient
+                            monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading
+                            waterfalls.
+                            This takes you one step closer to heaven. Every person who’s a traveller by heart must go on
+                            a
+                            Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
+                        </p>
+                        <p>Feel at home at the cleanest villages in Asia, trek on the oldest root
+                            bridges, chill in the most
+                            beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous
+                            monasteries,
+                            enjoy boating in one of the river islands, and much more. Whatever your reason may be, the
+                            fact
+                            remains that a major part of Northeast India remains unexplored. It doesn’t matter whether
+                            you’re
+                            travelling solo, with friends, family, or your better half; a Northeast vacation is an
+                            experience
+                            which should definitely be included in every traveller’s bucket list.
+                        </p>
+                    </div>
+                    <div id="assam-img">
+                        <img src="assets/images/assam.webp" class="assam-pic"
+                            alt="A woman plucks tea leaves in a tea garden in Assam">
+                    </div>
+                </div>
+            </section>
+            <section id="travel-meghalaya">
+                <div id="meghalaya">
+                    <div id="meghalaya-ne">
+                        <h1>Meghalaya</h1>
+                        <h3>What are seven sisters and one brother of India?</h3>
+                        <p> Have you ever asked yourself that question?
+                            We did, too, and it turns out that Northeast India comprises seven sister states, i.e.,
+                            Arunachal Pradesh, Assam, Manipur, Meghalaya, Mizoram, Nagaland, Tripura, and one brother
+                            state of Sikkim. Not just that, you’ll discover on your trip to Northeast India that the
+                            region also comprises the Northeastern area of West Bengal, which happens to be the famous
+                            Darjeeling.
+                        </p>
+                        <h3>What is the best time to visit Northeast India?</h3>
+                        <p>Owing much to its stunning location wherein Northeast India shares its borders with the
+                            neighbouring countries of Tibet, Bhutan, Bangladesh, and Myanmar, the whole region is
+                            dominated by hills and mountains to a large extent. Due to this, the climate in Northeast
+                            India generally remains cool while winters get extremely cold.
+                            It is advised that travelling to Northeast regions should be avoided in the rainy season
+                            from May to September-end. Hence, the best time to visit Northeast India is from November to
+                            April, also the peak season for travellers. The weather is at its best at this time, making
+                            it perfect for heading out and witnessing the authentic charm of the seven states.
+                        </p>
+                    </div>
+                    <div id="meghalaya-img">
+                        <img src="assets/images/meghalaya.webp" class="meghalaya-pic"
+                            alt="A stunning waterfall with crystal clear blue lake in Meghalaya">
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 
     <!-- Footer -->
     <footer>
