--- a/travel.html
+++ b/travel.html
@@ -54,26 +54,28 @@
                 <div id="assam">
                     <div id="assam-ne">
                         <h1>Assam</h1>
-                        <p>Every bit of Northeast India feels like magic, encompassing the best of dense
-                            forests, ancient
-                            monasteries, snow-capped mountains, pristine valleys, glistening lakes, and cascading
-                            waterfalls.
-                            This takes you one step closer to heaven. Every person who’s a traveller by heart must go on
-                            a
-                            Northeast trip at least once in their lifetime to unravel the secrets of Northeast India!
+                        <p>Rich in flora and fauna, Assam is one of the most famous Northeast states with positive vibes
+                            and good feels. Renowned for its vast tea plantations and archaeological sites, Assam is
+                            also home to one of the most remarkable UNESCO World Heritage Sites of Kaziranga National
+                            Park, one of the best places to visit when travelling to the Northeast. Be it pampering the
+                            wildlife lover in you or treating your taste buds to a soothing cup of chai, Assam will
+                            amaze you.
                         </p>
-                        <p>Feel at home at the cleanest villages in Asia, trek on the oldest root
-                            bridges, chill in the most
-                            beautiful hill stations, encounter the one-horned rhinoceros, explore the numerous
-                            monasteries,
-                            enjoy boating in one of the river islands, and much more. Whatever your reason may be, the
-                            fact
-                            remains that a major part of Northeast India remains unexplored. It doesn’t matter whether
-                            you’re
-                            travelling solo, with friends, family, or your better half; a Northeast vacation is an
-                            experience
-                            which should definitely be included in every traveller’s bucket list.
-                        </p>
+                        <ul>
+                            <li><strong>Must Experience:</strong> Encounter one-horned rhinoceros at Kaziranga National
+                                Park, and enjoy
+                                boating in Dawki River near the Indo-Bangladesh border.</li>
+                            <li><strong>Capital City:</strong> Guwahati</li>
+                            <li><strong>Places To See:</strong> Kamakhya Temple, Manas National Park, Assam State Zoo &
+                                Botanical Garden,
+                                Pobitora Wildlife Sanctuary, and more.</li>
+                            <li><strong>Things To Do:</strong> Brahmaputra river cruise, Wildlife safari at Manas
+                                National Park, experience
+                                the ecotourism of Majuli, shopping in Jorhat, and more.</li>
+                            <li><strong>Key Attractions:</strong> Majuli Island, Guwahati Planetarium</li>
+                            <li><strong>Famous Food:</strong> Duck Meat Curry, Aloo Pitika, Ou Tenga</li>
+                            <li><strong>Best Time To Visit:</strong> October to March</li>
+                        </ul>
                     </div>
                     <div id="assam-img">
                         <img src="assets/images/assam.webp" class="assam-pic"
@@ -85,24 +87,25 @@
                 <div id="meghalaya">
                     <div id="meghalaya-ne">
                         <h1>Meghalaya</h1>
-                        <h3>What are seven sisters and one brother of India?</h3>
-                        <p> Have you ever asked yourself that question?
-                            We did, too, and it turns out that Northeast India comprises seven sister states, i.e.,
-                            Arunachal Pradesh, Assam, Manipur, Meghalaya, Mizoram, Nagaland, Tripura, and one brother
-                            state of Sikkim. Not just that, you’ll discover on your trip to Northeast India that the
-                            region also comprises the Northeastern area of West Bengal, which happens to be the famous
-                            Darjeeling.
+                        <p>True to its name, Meghalaya is indeed an abode of clouds. It became famous for being home to
+                            the cleanest village in Asia, Mawlynnong. Considered to be the Scotland of the East ever
+                            since the times of British Rule, Meghalaya is filled with natural attractions like the
+                            Living Root Bridge, cascading waterfalls, and some of the longest caves in Asia. Visiting
+                            this place is undoubtedly a must, especially with a kick-ass camera. Meghalaya is a
+                            must-visit place and should be included in your Northeast trip plan.
+                            Must Experience: Explore Mawlynnong – the cleanest village in Asia and let the charm of
+                            living root bridge cast a magical spell on you.
                         </p>
-                        <h3>What is the best time to visit Northeast India?</h3>
-                        <p>Owing much to its stunning location wherein Northeast India shares its borders with the
-                            neighbouring countries of Tibet, Bhutan, Bangladesh, and Myanmar, the whole region is
-                            dominated by hills and mountains to a large extent. Due to this, the climate in Northeast
-                            India generally remains cool while winters get extremely cold.
-                            It is advised that travelling to Northeast regions should be avoided in the rainy season
-                            from May to September-end. Hence, the best time to visit Northeast India is from November to
-                            April, also the peak season for travellers. The weather is at its best at this time, making
-                            it perfect for heading out and witnessing the authentic charm of the seven states.
-                        </p>
+                        <ul>
+                            <li><strong>Capital City:</strong> Shillong</li>
+                            <li><strong>Places To See:</strong> Laitlum Canyon, Double Decker Living Root Bridge in Cherrapunjee, Balpakram
+                            National Park, Umiam Lake, and more.</li>
+                            <li><strong>Things To Do:</strong> Trekking on David Scott trail, rafting in Barapani Lake, kayaking on Kynshi
+                            River, camping on Khasi hills, and more.</li>
+                            <li><strong>Key Attractions:</strong> Umiam Lake, Elephant Falls</li>
+                            <li><strong>Famous Food:</strong> Bamboo shoots, Jadoh, Jaintia</li>
+                            <li><strong>Best Time To Visit:</strong> April to June</li>
+                        </ul>
                     </div>
                     <div id="meghalaya-img">
                         <img src="assets/images/meghalaya.webp" class="meghalaya-pic"
@@ -117,26 +120,30 @@
     <footer>
         <!-- Visit our social media header -->
         <p id="visit-socialm">Visit our social media page:</p>
-        
+
         <!-- Social media buttons -->
         <ul id="social-media">
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.threads.net/" target="_blank" rel="noopener" aria-label="Visit our Threads page (opens in a new tab)">
+                <a href="https://www.threads.net/" target="_blank" rel="noopener"
+                    aria-label="Visit our Threads page (opens in a new tab)">
                     <i class="fa-brands fa-threads"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
+                <a href="https://www.x.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
                     <i class="fa-brands fa-x-twitter"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
             </li>
