Restyle travel page and add style to media query min 1200px

--- a/travel.html
+++ b/travel.html
@@ -61,7 +61,7 @@
                             wildlife lover in you or treating your taste buds to a soothing cup of chai, Assam will
                             amaze you.
                         </p>
-                        <ul>
+                        <ul id="list-assam">
                             <li><strong>Must Experience:</strong> Encounter one-horned rhinoceros at Kaziranga National
                                 Park, and enjoy
                                 boating in Dawki River near the Indo-Bangladesh border.</li>
@@ -96,7 +96,7 @@
                             Must Experience: Explore Mawlynnong – the cleanest village in Asia and let the charm of
                             living root bridge cast a magical spell on you.
                         </p>
-                        <ul>
+                        <ul id="list-meghalaya">
                             <li><strong>Capital City:</strong> Shillong</li>
                             <li><strong>Places To See:</strong> Laitlum Canyon, Double Decker Living Root Bridge in Cherrapunjee, Balpakram
                             National Park, Umiam Lake, and more.</li>
