Add Travel button to Explore page and add Travel button hover effect to media query

--- a/explore.html
+++ b/explore.html
@@ -103,6 +103,9 @@
                             April, also the peak season for travellers. The weather is at its best at this time, making
                             it perfect for heading out and witnessing the authentic charm of the seven states.
                         </p>
+                        <div id="travel-btn">
+                        <button id="travel-button"><a href="explore.html" class="visit-travel-btn"><i class="fa-solid fa-route"></i>
+                            Travel</a></button></div>
                     </div>
                     <div id="seven-map-img">
                         <img src="assets/images/seven_sis_map.webp" class="seven-map-pic"
