Update Travel button href to lead to correct page

--- a/explore.html
+++ b/explore.html
@@ -104,7 +104,7 @@
                             it perfect for heading out and witnessing the authentic charm of the seven states.
                         </p>
                         <div id="travel-btn">
-                        <button id="travel-button"><a href="explore.html" class="visit-travel-btn"><i class="fa-solid fa-route"></i>
+                        <button id="travel-button"><a href="travel.html" class="visit-travel-btn"><i class="fa-solid fa-route"></i>
                             Travel</a></button></div>
                     </div>
                     <div id="seven-map-img">
