Add contact form to contact page

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,29 @@
     </header>
 
     <!-- Main content -->
-    <main>Welcome to Gateway to NE India</main>
+    <main>
+        <section id="contact-us">
+            <form id="contact-form" method="post" action="https://formdump.codeinstitute.net/">
+            <h1>HAVE A QUESTION <i class="fa-solid fa-question"></i></h1>
+            <label for="first_name">First Name</label>
+            <br>
+            <input type="text" name="first_name" id="first_name" class="text-input" required>
+            <br>
+            <label for="last_name">Last Name</label>
+            <br>
+            <input type="text" name="last_name" id="last_name" class="text-input" required>
+            <br>
+            <label for="email_address">Email Address</label>
+            <br>
+            <input type="email" name="email_address" id="email_address" class="text-input" required>
+            <br>
+            <label for="message">Your message</label>
+            <br>
+            <input type="text" name="message" id="message" class="text-input" required>
+            <br>
+            <button type="submit" class="submit-msg-button">Submit your message!</button>
+            </form>
+    </main>
 
     <!-- Footer -->
     <footer>
