--- a/contact.html
+++ b/contact.html
@@ -49,53 +49,59 @@
 
     <!-- Main content -->
     <main>
-        <section id="contact-us">
-            <form id="contact-form" method="post" action="https://formdump.codeinstitute.net/">
-            <h1>HAVE A QUESTION <i class="fa-solid fa-question"></i></h1>
-            <label for="first_name">First Name</label>
-            <br>
-            <input type="text" name="first_name" id="first_name" class="text-input" required>
-            <br>
-            <label for="last_name">Last Name</label>
-            <br>
-            <input type="text" name="last_name" id="last_name" class="text-input" required>
-            <br>
-            <label for="email_address">Email Address</label>
-            <br>
-            <input type="email" name="email_address" id="email_address" class="text-input" required>
-            <br>
-            <label for="message">Your message</label>
-            <br>
-            <input type="text" name="message" id="message" class="text-input" required>
-            <br>
-            <button type="submit" class="submit-msg-button">Submit your message!</button>
-            </form>
+        <div class="contact">
+            <section id="contact-us">
+                <form id="contact-form" method="post" action="https://formdump.codeinstitute.net/">
+                    <h1 class="question">HAVE A QUESTION <i class="fa-solid fa-question"></i></h1>
+                    <label for="first_name" class="lblcolor">First Name:</label>
+                    <input type="text" name="first_name" id="first_name" class="text-input" required>
+                    <br>
+                    <label for="last_name" class="lblcolor">Last Name:</label>
+                    <input type="text" name="last_name" id="last_name" class="text-input" required>
+                    <br>
+                    <label for="email_address" class="lblcolor">Email Address:</label>
+                    <input type="email" name="email_address" id="email_address" class="text-input" required>
+                    <br>
+                    <label for="message" class="lblcolor">Your message:</label>
+                    <br>
+                    <textarea name="message" id="message" class="text-input" placeholder="Write your message" required></textarea>
+                    <div class="submit-button">
+                        <button type="submit" id="submit-msg-button"><i class="fa-solid fa-paper-plane"></i>
+                            Submit!</button>
+                    </div>
+                </form>
+            </section>
+        </div>
     </main>
 
     <!-- Footer -->
     <footer>
         <!-- Visit our social media header -->
         <p id="visit-socialm">Visit our social media page:</p>
-        
+
         <!-- Social media buttons -->
         <ul id="social-media">
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.threads.net/" target="_blank" rel="noopener" aria-label="Visit our Threads page (opens in a new tab)">
+                <a href="https://www.threads.net/" target="_blank" rel="noopener"
+                    aria-label="Visit our Threads page (opens in a new tab)">
                     <i class="fa-brands fa-threads"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
+                <a href="https://www.x.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our X (formerly Twitter) page (opens in a new tab)">
                     <i class="fa-brands fa-x-twitter"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
             </li>
