--- a/confirmation.html
+++ b/confirmation.html
@@ -12,6 +12,9 @@
     <meta name="keywords"
         content="Northeast India, Northeast India travel guide, Northeast India tourism, Assam tourism, Meghalaya tourism, Northeast India tourism, Northeast India adventures, Northeast India travel">
 
+    <!-- Return to the landing page after submitting the contact form -->
+    <meta http-equiv="refresh" content="10; url=index.html">
+
     <!-- Title of the website -->
     <title>Gateway to NE India</title>
 
@@ -49,28 +52,11 @@
 
     <!-- Main content -->
     <main>
-        <div class="contact">
-            <section id="contact-us">
-                <form id="contact-form" action="confirmation.html">
-                    <h1 class="question">HAVE A QUESTION <i class="fa-solid fa-question"></i></h1>
-                    <label for="first_name" class="lblcolor">First Name:</label>
-                    <input type="text" name="first_name" id="first_name" class="text-input" required>
-                    <br>
-                    <label for="last_name" class="lblcolor">Last Name:</label>
-                    <input type="text" name="last_name" id="last_name" class="text-input" required>
-                    <br>
-                    <label for="email_address" class="lblcolor">Email Address:</label>
-                    <input type="email" name="email_address" id="email_address" class="text-input" required>
-                    <br>
-                    <label for="message" class="lblcolor">Your message:</label>
-                    <br>
-                    <textarea name="message" id="message" class="text-input" placeholder="Write your message" required></textarea>
-                    <div class="submit-button">
-                        <button type="submit" id="submit-msg-button"><i class="fa-solid fa-paper-plane"></i>
-                            Submit!</button>
-                    </div>
-                </form>
-            </section>
+        <div class="thankyou-message">
+            <h1 class="thankyou-font-style">Thank you for contacting us!</h1>
+            <p class="thankyou-font-style">We will get back to you soon!
+            </p>
+            <p class="thankyou-font-style"><strong>You will be automatically redirected back to the home page in 10 seconds.</strong></p>
         </div>
     </main>
 
