--- a/404.html
+++ b/404.html
@@ -52,10 +52,10 @@
 
     <!-- Main content -->
     <main>
-        <div class="404-message">
-            <h1 class="404-font-style">Whoops, looks like you wandered into an unknown place!</h1>
-            <p class="404-font-style">Do not worry, we will take you back to the path to an undiscovered hidden gem.</p>
-            <p class="404-font-style"><strong>Sit tight, we will redirect you back to the home page in 10
+        <div class="error-message">
+            <h1 class="error-font-style">Whoops, looks like you wandered into an unknown place!</h1>
+            <p class="error-font-style">Do not worry, we will take you back to the path to an undiscovered hidden gem.</p>
+            <p class="error-font-style"><strong>Sit tight, we will redirect you back to the home page in 10
                     seconds.</strong></p>
         </div>
     </main>
