Fix error that a is not permitted to be descendant of button

--- a/explore.html
+++ b/explore.html
@@ -104,8 +104,8 @@
                             it perfect for heading out and witnessing the authentic charm of the seven states.
                         </p>
                         <div id="travel-btn">
-                        <button id="travel-button"><a href="travel.html" class="visit-travel-btn"><i class="fa-solid fa-route"></i>
-                            Travel</a></button></div>
+                        <a href="travel.html" class="visit-travel-btn"><i class="fa-solid fa-route"></i>
+                            Travel</a></div>
                     </div>
                     <div id="seven-map-img">
                         <img src="assets/images/seven_sis_map.webp" class="seven-map-pic"
