--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
             </p>
             <p class="welcome-font-style">Be a part of this exciting journey and uncover the hidden gems of Northeast
                 India with us!</p>
-            <button id="wlcm-button"><a href="explore.html" class="visit-explore-btn"><i class="fa-regular fa-compass"></i>
-                    Explore</a></button>
+            <!-- Explore button -->
+            <a href="explore.html" class="visit-explore-btn"><i class="fa-regular fa-compass"></i>
+                Explore</a>
         </div>
     </main>
 
