Fix error that character reference was not terminated by semicolon

--- a/explore.html
+++ b/explore.html
@@ -150,7 +150,7 @@
         </ul>
 
         <!-- Copyright -->
-        <p id="copyright">&copy Gateway to NE India 2024</p>
+        <p id="copyright">&copy; Gateway to NE India 2024</p>
     </footer>
 
     <!-- Font Awesome kit -->
